--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vue-lazyload": "^1.0.6",
+    "good-storage": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
