--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.3.0",
     "fast-xml-parser": "^2.6.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0",
-    "vuex": "^2.3.1",
     "vue-lazyload": "^1.0.6",
-    "good-storage": "^1.0.1"
+    "vue-router": "^2.6.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
