--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "create-keyframe-animation": "^0.1.0",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "es6-promise": "^4.1.1",
